--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-    "name": "react-fundamentals",
-    "version": "1.0.0",
-    "description": "React Fundamentals Course Code-base",
-    "main": "index.js",
-    "scripts": {
-        "production": "webpack -p",
-        "start": "webpack-dev-server --history-api-fallback"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/protosss/react-fundamentals.git"
-    },
-    "author": "Yota",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/protosss/react-fundamentals/issues"
-    },
-    "homepage": "https://github.com/protosss/react-fundamentals#readme",
-    "devDependencies": {
-        "babel-core": "^6.24.1",
-        "babel-loader": "^7.0.0",
-        "babel-preset-react": "^6.24.1",
-        "html-webpack-plugin": "^2.28.0",
-        "webpack": "^2.5.1",
-        "webpack-dev-server": "^2.4.5"
-    },
-    "dependencies": {
-        "react": "^15.5.4",
-        "react-dom": "^15.5.4",
-        "react-router": "^3.0.2"
-    }
+  "name": "react-fundamentals",
+  "version": "1.0.0",
+  "description": "React Fundamentals Course Code-base",
+  "main": "index.js",
+  "scripts": {
+    "production": "webpack -p",
+    "start": "webpack-dev-server --history-api-fallback"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/protosss/react-fundamentals.git"
+  },
+  "author": "Yota",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/protosss/react-fundamentals/issues"
+  },
+  "homepage": "https://github.com/protosss/react-fundamentals#readme",
+  "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-react": "^6.24.1",
+    "html-webpack-plugin": "^2.28.0",
+    "webpack": "^2.5.1",
+    "webpack-dev-server": "^2.4.5"
+  },
+  "dependencies": {
+    "axios": "^0.16.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-router": "^3.0.2"
+  }
 }
